--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     					<div class="ripple-container"></div></a>
     				</li>
 		            <li>
-		                <a href="https://twitter.com/CreativeTim" target="_blank" class="btn btn-simple btn-white btn-just-icon">
-							<i class="fa fa-twitter"></i>
+		                <a href="https://github.com/yash2code" target="_blank" class="btn btn-simple btn-white btn-just-icon">
+							<i class="fa fa-github"></i>
 						</a>
 		            </li>
 		            <li>
@@ -65,15 +65,28 @@
 <!-- end navbar -->
 
 <div class="wrapper">
-	<div class="header">
+	<div class="header header-filter">
 
 	</div>
-	<!-- you can use the class main-raised if you want the main area to be as a page with shadows -->
-	<div class="main">
-		<div class="container">
-
-			<!-- here you can add your content -->
-			
+	<!-- class main-raised is used for the main area to be as a page with shadows -->
+	<div class="main main-raised">
+		<div class="profile-content">
+			<div class="container">
+				<div class="row">
+					<div class="profile">
+						<div class="avatar">
+							<img src="./assets/img/profile.png" alt="Profile Image" class="img-circle img-responsive img-raised"/>
+						</div>
+						<div class="name">
+							<h3 class="title">Yash Chaudhary</h3>
+							<h6>Full Stack Developer</h6>
+						</div>
+					</div>
+				</div>
+				<div class="description text-center">
+					<p>I’m an innovative full-stack developer based in Meerut,India.I'm dedicated to solve complex problems and create elegant and easy-to-use websites,mobile applications, and other digital products with an unforgettable and unique user experience.</p>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
