social links updated

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         	<div class="navbar-collapse collapse" id="navigation-small" aria-expanded="false">
         		<ul class="nav navbar-nav navbar-right">
 					<li>
-    					<a href="#" target="_blank">
-    						Contact
-    					<div class="ripple-container"></div></a>
+    					<a href="#" target="_blank" class="btn btn-simple btn-white btn-just-icon">
+							<i class="fa fa-envelope"></i>
+						</a>
     				</li>
 		            <li>
 		                <a href="https://github.com/yash2code" target="_blank" class="btn btn-simple btn-white btn-just-icon">
@@ -49,12 +49,12 @@
 						</a>
 		            </li>
 		            <li>
-		                <a href="https://www.facebook.com/CreativeTim" target="_blank" class="btn btn-simple btn-white btn-just-icon">
-							<i class="fa fa-facebook-square"></i>
+		                <a href="https://www.linkedin.com/in/yashchaudharyofficial" target="_blank" class="btn btn-simple btn-white btn-just-icon">
+							<i class="fa fa-linkedin"></i>
 						</a>
 		            </li>
 					<li>
-		                <a href="https://www.instagram.com/CreativeTimOfficial" target="_blank" class="btn btn-simple btn-white btn-just-icon">
+		                <a href="https://www.instagram.com/yash.ao" target="_blank" class="btn btn-simple btn-white btn-just-icon">
 							<i class="fa fa-instagram"></i>
 						</a>
 		            </li>
