--- a/index.html
+++ b/index.html
@@ -86,6 +86,28 @@
 				<div class="description text-center">
 					<p>I’m an innovative full-stack developer based in Meerut,India.I'm dedicated to solve complex problems and create elegant and easy-to-use websites,mobile applications, and other digital products with an unforgettable and unique user experience.</p>
 				</div>
+				<div class="row">
+					<div class="col-md-6 col-md-offset-3">
+						<div class="profile-tabs">
+							<div class="nav-align-center">
+								<ul class="nav nav-pills" role="tablist">
+									<li class="active">
+										<a href="#studio" role="tab" data-toggle="tab" aria-expanded="true">
+											<i class="material-icons">camera</i>
+											Projects
+										</a>
+									</li>
+									<li>
+										<a href="#studio" role="tab" data-toggle="tab" aria-expanded="true">
+											<i class="material-icons">camera</i>
+											Skills
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -105,7 +127,7 @@
 	<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
 	<script src="assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
 
-	<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
+	<!-- Control Center for Material Kit: activating the ripples, parallax effects, etc -->
 	<script src="assets/js/material-kit.js" type="text/javascript"></script>
 
 </html>
