--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
 	<link rel="icon" type="image/png" href="assets/img/favicon.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
@@ -93,13 +92,13 @@
 								<ul class="nav nav-pills" role="tablist">
 									<li class="active">
 										<a href="#studio" role="tab" data-toggle="tab" aria-expanded="true">
-											<i class="material-icons">camera</i>
+											<i class="material-icons">web</i>
 											Projects
 										</a>
 									</li>
 									<li>
 										<a href="#studio" role="tab" data-toggle="tab" aria-expanded="true">
-											<i class="material-icons">camera</i>
+											<i class="material-icons">verified_user</i>
 											Skills
 										</a>
 									</li>
