--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         	<div class="navbar-collapse collapse" id="navigation-small" aria-expanded="false">
         		<ul class="nav navbar-nav navbar-right">
 					<li>
-    					<a href="#" target="_blank" class="btn btn-simple btn-white btn-just-icon">
+    					<a href="mailto:yash240196@gmail.com" target="_blank" class="btn btn-simple btn-white btn-just-icon">
 							<i class="fa fa-envelope"></i>
 						</a>
     				</li>
