--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="icon" type="image/png" href="assets/img/favicon.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>Material Kit by Creative Tim</title>
+	<title>YaSh Chaudhary</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
@@ -18,6 +18,7 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
     <link href="assets/css/material-kit.css" rel="stylesheet"/>
      <link href="assets/css/custom.css" rel="stylesheet" />
+    
 </head>
 
 <body>
@@ -91,18 +92,42 @@
 							<div class="nav-align-center">
 								<ul class="nav nav-pills" role="tablist">
 									<li class="active">
-										<a href="#studio" role="tab" data-toggle="tab" aria-expanded="true">
+										<a href="#projects" role="tab" data-toggle="tab" aria-expanded="true">
 											<i class="material-icons">web</i>
 											Projects
 										</a>
 									</li>
-									<li>
-										<a href="#studio" role="tab" data-toggle="tab" aria-expanded="true">
+									<!--Another Tab -> Will be released with next ver.-->
+									<!-- <li>
+										<a href="#skills" role="tab" data-toggle="tab" aria-expanded="true">
 											<i class="material-icons">verified_user</i>
 											Skills
 										</a>
-									</li>
+									</li> -->
 								</ul>
+								<div class="tab-content gallery">
+									<div class="tab-pane active" id="projects">
+										<div class="row">
+											<div class="col-md-12">
+												<a href="https://github.com/yash2code/ReactWeatherES6" target="_blank">
+													<img src="assets/img/weather.png" alt="weather_thumbnail" class="img-rounded  img-responsive">
+												</a>
+												<a href="https://github.com/yash2code/movie-python" target="_blank">
+													<img src="assets/img/movie.jpg" alt="movie_thumbnail" class="img-rounded  img-responsive">
+												</a>
+											</div>
+										</div>
+									</div>
+									<!--Incomplete another tab content-->
+									<!-- <div class="tab-pane" id="skills">
+										<div class="row">
+											<div class="col-md-12">
+												<img src="assets/img/book.jpg" alt="" class="img-rounded img-responsive">
+												<img src="assets/img/kala.jpg" alt="" class="img-rounded img-responsive">
+											</div>
+										</div>
+									</div> -->
+								</div>
 							</div>
 						</div>
 					</div>
@@ -123,9 +148,7 @@
 	<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
 	<script src="assets/js/nouislider.min.js" type="text/javascript"></script>
 
-	<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
-	<script src="assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
-
+	
 	<!-- Control Center for Material Kit: activating the ripples, parallax effects, etc -->
 	<script src="assets/js/material-kit.js" type="text/javascript"></script>
 
