--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<div class="profile-content">
 			<div class="container">
 				<div class="row">
-					<div class="profile">
+					<div class="profile col-md-12">
 						<div class="avatar">
 							<img src="./assets/img/profile.png" alt="Profile Image" class="img-circle img-responsive img-raised"/>
 						</div>
@@ -83,8 +83,12 @@
 						</div>
 					</div>
 				</div>
-				<div class="description text-center">
-					<p>I’m an innovative full-stack developer based in Meerut,India.I'm dedicated to solve complex problems and create elegant and easy-to-use websites,mobile applications, and other digital products with an unforgettable and unique user experience.</p>
+				<div class="row">
+					<div class="col-md-12">
+						<div class="description text-center">
+							<p>I’m an innovative full-stack developer based in Meerut,India.I'm dedicated to solve complex problems and create elegant and easy-to-use websites,mobile applications, and other digital products with an unforgettable and unique user experience.</p>
+						</div>
+					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3">
@@ -137,10 +141,7 @@
 	</div>
 </div>
 
-
-</body>
-
-	<!--   Core JS Files   -->
+<!--   Core JS Files   -->
 	<script src="assets/js/jquery.min.js" type="text/javascript"></script>
 	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="assets/js/material.min.js"></script>
@@ -151,5 +152,9 @@
 	
 	<!-- Control Center for Material Kit: activating the ripples, parallax effects, etc -->
 	<script src="assets/js/material-kit.js" type="text/javascript"></script>
+
+
+
+</body>
 
 </html>
