add img reminder

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         	<div class="navbar-collapse collapse" id="navigation-small" aria-expanded="false">
         		<ul class="nav navbar-nav navbar-right">
 					<li>
-    					<a href="mailto:yash240196@gmail.com" target="_blank" class="btn btn-simple btn-white btn-just-icon">
+    					<a href="mailto:contact@yashchaudhary.me" target="_blank" class="btn btn-simple btn-white btn-just-icon">
 							<i class="fa fa-envelope"></i>
 						</a>
     				</li>
@@ -118,6 +118,9 @@
 												</a>
 												<a href="https://github.com/yash2code/movie-python" target="_blank">
 													<img src="assets/img/movie.jpg" alt="movie_thumbnail" class="img-rounded  img-responsive">
+												</a>
+												<a href="https://github.com/yash2code/Reminder-redux" target="_blank">
+													<img src="assets/img/reminder.jpg" alt="reminder_thumbnail" class="img-rounded  img-responsive">
 												</a>
 											</div>
 										</div>
