--- a/index.html
+++ b/index.html
@@ -22,45 +22,6 @@
 
 <body>
 
-<!-- Navbar start -->
-<nav class="navbar navbar-fixed-top navbar-color-on-scroll navbar-transparent">
-    	<div class="container">
-        	<div class="navbar-header">
-        		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation-small" aria-expanded="false">
-            		<span class="sr-only">Toggle navigation</span>
-		            <span class="icon-bar"></span>
-		            <span class="icon-bar"></span>
-		            <span class="icon-bar"></span>
-        		</button>
-        		<a class="navbar-brand" href="#">YaSh</a>
-        	</div>
-
-        	<div class="navbar-collapse collapse" id="navigation-small" aria-expanded="false">
-        		<ul class="nav navbar-nav navbar-right">
-					<li>
-    					<a href="mailto:contact@yashchaudhary.me" target="_blank" class="btn btn-simple btn-white btn-just-icon">
-							<i class="fa fa-envelope"></i>
-						</a>
-    				</li>
-		            <li>
-		                <a href="https://github.com/yash2code" target="_blank" class="btn btn-simple btn-white btn-just-icon">
-							<i class="fa fa-github"></i>
-						</a>
-		            </li>
-		            <li>
-		                <a href="https://www.linkedin.com/in/yashchaudharyofficial" target="_blank" class="btn btn-simple btn-white btn-just-icon">
-							<i class="fa fa-linkedin"></i>
-						</a>
-		            </li>
-					<li>
-		                <a href="https://www.instagram.com/yash.ao" target="_blank" class="btn btn-simple btn-white btn-just-icon">
-							<i class="fa fa-instagram"></i>
-						</a>
-		            </li>
-        		</ul>
-        	</div>
-    	</div>
-    </nav>
 <!-- end navbar -->
 
 <div class="wrapper">
@@ -76,16 +37,28 @@
 						<div class="avatar">
 							<img src="./assets/img/profile.png" alt="Profile Image" class="img-circle img-responsive img-raised"/>
 						</div>
-						<div class="name">
-							<h3 class="title">Yash Chaudhary</h3>
+						<div class="name" style="color: rgb(125, 0, 146);">
+							<h3 class="title" style="color: rgb(125, 0, 146);">Yash Chaudhary</h3>
 							<h6>Full Stack Developer</h6>
+							<a href="mailto:contact@yashchaudhary.me" target="_blank" class="btn btn-simple btn-white btn-just-icon" style="color:rgb(125, 0, 146);">
+									<i class="fa fa-envelope"></i>
+							</a>	
+							<a href="https://github.com/yash2code" target="_blank" class="btn btn-simple btn-white btn-just-icon" style="color:rgb(125, 0, 146);">
+								<i class="fa fa-github"></i>
+							</a>
+							<a href="https://www.linkedin.com/in/yashchaudharyofficial" target="_blank" class="btn btn-simple btn-white btn-just-icon" style="color:rgb(125, 0, 146);">
+								<i class="fa fa-linkedin"></i>
+							</a>
+							<a href="https://www.instagram.com/yash.ao" target="_blank" class="btn btn-simple btn-white btn-just-icon" style="color:rgb(125, 0, 146);">
+								<i class="fa fa-instagram"></i>
+							</a>
 						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
-						<div class="description text-center">
-							<p>I’m an innovative full-stack developer based in Meerut,India.I'm dedicated to solve complex problems and create elegant and easy-to-use websites,mobile applications, and other digital products with an unforgettable and unique user experience.</p>
+						<div class="description text-center" style="color: rgb(125, 0, 146);">
+							<p>I’m an innovative full-stack developer based in Meerut, India. I'm dedicated to solve complex problems and create elegant, easy-to-use websites; useful mobile applications; and other digital products with an unforgettable and unique user experience.</p>
 						</div>
 					</div>
 				</div>
@@ -93,34 +66,31 @@
 					<div class="col-md-6 col-md-offset-3">
 						<div class="profile-tabs">
 							<div class="nav-align-center">
-								<ul class="nav nav-pills" role="tablist">
-									<li class="active">
-										<a href="#projects" role="tab" data-toggle="tab" aria-expanded="true">
-											<i class="material-icons">web</i>
-											Projects
-										</a>
-									</li>
-									<!--Another Tab -> Will be released with next ver.-->
-									<!-- <li>
-										<a href="#skills" role="tab" data-toggle="tab" aria-expanded="true">
-											<i class="material-icons">verified_user</i>
-											Skills
-										</a>
-									</li> -->
-								</ul>
+								
 								<div class="tab-content gallery">
-									<div class="tab-pane active" id="projects">
+									<div class="tab-pane active" id="projects" style="text-align: left;">
 										<div class="row">
 											<div class="col-md-12">
+												<h1 style="color: rgb(125, 0, 146); font-weight: bolder;">MY PROJECTS:</h1>	
 												<a href="https://github.com/yash2code/ReactWeatherES6" target="_blank">
-													<img src="assets/img/weather.png" alt="weather_thumbnail" class="img-rounded  img-responsive">
+													<h2>React Weather ES6:</h2>
+													<p>This Node app fetches the weather of any city in a quick and easy way.</p>
 												</a>
+												<hr>
 												<a href="https://github.com/yash2code/movie-python" target="_blank">
-													<img src="assets/img/movie.jpg" alt="movie_thumbnail" class="img-rounded  img-responsive">
+													<h2>Python Movie Trailer Watcher:</h2>
+													<p>Watch the trailer of any movie in a single click using Python.</p>
 												</a>
+											<hr>												
 												<a href="https://github.com/yash2code/Reminder-redux" target="_blank">
-													<img src="assets/img/reminder.jpg" alt="reminder_thumbnail" class="img-rounded  img-responsive">
+													<h2>Remind Redux:</h2>
+													<p>(add description here)</p>
 												</a>
+											<br>
+											<br>
+											<br>
+											<br>
+											<p class="copy">&copy; Yash Chaudhary</p>
 											</div>
 										</div>
 									</div>
