--- a/index.html
+++ b/index.html
@@ -13,15 +13,75 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
 
+
+
   <!-- CSS Files -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
   <link href="assets/css/material-kit.css" rel="stylesheet"/>
+
   <link href="assets/css/custom.css" rel="stylesheet" />
+
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="assets/img/favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="assets/img/favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/img/favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="assets/img/favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/img/favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="assets/img/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="assets/img/favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="assets/img/favicon/ms-icon-144x144.png">
 </head>
 
 <body>
 
-<!-- end navbar -->
+<!-- Navbar start -->
+<nav class="navbar navbar-fixed-top navbar-color-on-scroll navbar-transparent">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation-small" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">YaSh</a>
+      </div>
+  
+      <div class="navbar-collapse collapse" id="navigation-small" aria-expanded="false">
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a href="mailto:contact@yashchaudhary.me" target="_blank" class="btn btn-simple btn-white btn-just-icon">
+              <i class="fa fa-envelope"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/yash2code" target="_blank" class="btn btn-simple btn-white btn-just-icon">
+              <i class="fa fa-github"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/yashchaudharyofficial" target="_blank" class="btn btn-simple btn-white btn-just-icon">
+              <i class="fa fa-linkedin"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/yash.ao" target="_blank" class="btn btn-simple btn-white btn-just-icon">
+              <i class="fa fa-instagram"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- end navbar -->
 
 <div class="wrapper">
 	<div class="header header-filter">
@@ -36,72 +96,86 @@
 						<div class="avatar">
 							<img src="./assets/img/profile.png" alt="Profile Image" class="img-circle img-responsive img-raised"/>
 						</div>
-						<div class="name" style="color: rgb(125, 0, 146);">
-							<h3 class="title" style="color: rgb(125, 0, 146);">Yash Chaudhary</h3>
+						<div class="name" class="accent-colour">
+							<h3 class="title" class="accent-colour">Yash Chaudhary</h3>
 							<h6>Full Stack Developer</h6>
-							<a href="mailto:contact@yashchaudhary.me" target="_blank" class="btn btn-simple btn-white btn-just-icon" style="color:rgb(125, 0, 146);">
-									<i class="fa fa-envelope"></i>
+							<a href="mailto:contact@yashchaudhary.me" target="_blank" class="btn btn-simple btn-white btn-just-icon">
+									<i class="fa fa-envelope accent-colour"></i>
 							</a>	
-							<a href="https://github.com/yash2code" target="_blank" class="btn btn-simple btn-white btn-just-icon" style="color:rgb(125, 0, 146);">
-								<i class="fa fa-github"></i>
+							<a href="https://github.com/yash2code" target="_blank" class="btn btn-simple btn-white btn-just-icon">
+								<i class="fa fa-github accent-colour"></i>
 							</a>
-							<a href="https://www.linkedin.com/in/yashchaudharyofficial" target="_blank" class="btn btn-simple btn-white btn-just-icon" style="color:rgb(125, 0, 146);">
-								<i class="fa fa-linkedin"></i>
+							<a href="https://www.linkedin.com/in/yashchaudharyofficial" target="_blank" class="btn btn-simple btn-white btn-just-icon">
+								<i class="fa fa-linkedin accent-colour"></i>
 							</a>
-							<a href="https://www.instagram.com/yash.ao" target="_blank" class="btn btn-simple btn-white btn-just-icon" style="color:rgb(125, 0, 146);">
-								<i class="fa fa-instagram"></i>
+							<a href="https://www.instagram.com/yash.ao" target="_blank" class="btn btn-simple btn-white btn-just-icon">
+								<i class="fa fa-instagram accent-colour"></i>
 							</a>
 						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
-						<div class="description text-center" style="color: rgb(125, 0, 146);">
-							<p>I’m an innovative full-stack developer based in Meerut, India. I'm dedicated to solve complex problems and create elegant, easy-to-use websites; useful mobile applications; and other digital products with an unforgettable and unique user experience.</p>
+						<div class="description text-center" class="accent-colour">
+							<p class="accent-colour">I’m an innovative full-stack developer based in Meerut, India. I'm dedicated to solve complex problems and create elegant, easy-to-use websites; useful mobile applications; and other digital products with an unforgettable and unique user experience.</p>
 						</div>
 					</div>
-				</div>
+        </div>
+        <hr>
 				<div class="row">
-					<div class="col-md-6 col-md-offset-3">
+					<div class="col-md-12">
 						<div class="profile-tabs">
 							<div class="nav-align-center">
-								
 								<div class="tab-content gallery">
-									<div class="tab-pane active" id="projects" style="text-align: left;">
-										<div class="row">
-											<div class="col-md-12">
-												<h1 style="color: rgb(125, 0, 146); font-weight: bolder;">MY PROJECTS:</h1>	
-												<a href="https://github.com/yash2code/ReactWeatherES6" target="_blank">
-													<h2>React Weather ES6:</h2>
-													<p>This Node app fetches the weather of any city in a quick and easy way.</p>
-												</a>
-												<hr>
-												<a href="https://github.com/yash2code/movie-python" target="_blank">
-													<h2>Python Movie Trailer Watcher:</h2>
-													<p>Watch the trailer of any movie in a single click using Python.</p>
-												</a>
-											<hr>												
-												<a href="https://github.com/yash2code/Reminder-redux" target="_blank">
-													<h2>Remind Redux:</h2>
-													<p>(add description here)</p>
-												</a>
-											<br>
-											<br>
-											<br>
-											<br>
-											<p class="copy">&copy; Yash Chaudhary</p>
-											</div>
-										</div>
+									<div class="tab-pane active" id="projects" style="text-align: center;">
+                    <h1 style="font-weight: bolder;" class="accent-colour">MY PROJECTS:</h1>	
+                    <div class="card-columns">
+                      <div class="card fade-in-1">
+                        <a href="https://github.com/yash2code/ReactWeatherES6" target="_blank">
+                          <div class="card-title">
+                              <h2>React Weather ES6</h2>
+                          </div>
+                          <div class="card-image">
+                              <img src="assets/img/weather.png" alt="weather_thumbnail">
+                          </div>
+                          <div class="card-body">
+                              This Node app fetches the weather of any city in a quick and easy way.
+                          </div>
+                        </a>
+                      </div>
+
+                      <div class="card fade-in-2">
+                        <a href="https://github.com/yash2code/movie-python" target="_blank">
+                          <div class="card-title">
+                              <h2>Python Movie Trailer Watcher</h2>
+                          </div>
+                          <div class="card-image">
+                              <img src="assets/img/movie.jpg" alt="movie_thumbnail">
+                          </div>
+                          <div class="card-body">
+                              Watch the trailer of any movie in a single click using Python.
+                          </div>
+                        </a>
+                      </div>
+
+                      <div class="card fade-in-3">
+                        <a href="https://github.com/yash2code/Reminder-redux" target="_blank">
+                          <div class="card-title">
+                              <h2>Remind Redux</h2>
+                          </div>
+                          <div class="card-image">
+                              <img src="assets/img/reminder.jpg" alt="reminder_thumbnail">
+                          </div>
+                          <div class="card-body">
+                              (add description here)
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+
+										<p class="copy" style="margin-top: 3rem;">&copy; Yash Chaudhary</p>
 									</div>
-									<!--Incomplete another tab content-->
-									<!-- <div class="tab-pane" id="skills">
-										<div class="row">
-											<div class="col-md-12">
-												<img src="assets/img/book.jpg" alt="" class="img-rounded img-responsive">
-												<img src="assets/img/kala.jpg" alt="" class="img-rounded img-responsive">
-											</div>
-										</div>
-									</div> -->
+
 								</div>
 							</div>
 						</div>
@@ -110,122 +184,7 @@
 			</div>
 		</div>
 	</div>
-<!-- Navbar start -->
-<nav class="navbar navbar-fixed-top navbar-color-on-scroll navbar-transparent">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation-small" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">YaSh</a>
-    </div>
 
-    <div class="navbar-collapse collapse" id="navigation-small" aria-expanded="false">
-      <ul class="nav navbar-nav navbar-right">
-        <li>
-          <a href="mailto:contact@yashchaudhary.me" target="_blank" class="btn btn-simple btn-white btn-just-icon">
-            <i class="fa fa-envelope"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/yash2code" target="_blank" class="btn btn-simple btn-white btn-just-icon">
-            <i class="fa fa-github"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/yashchaudharyofficial" target="_blank" class="btn btn-simple btn-white btn-just-icon">
-            <i class="fa fa-linkedin"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/yash.ao" target="_blank" class="btn btn-simple btn-white btn-just-icon">
-            <i class="fa fa-instagram"></i>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-<!-- end navbar -->
-
-<div class="wrapper">
-    <div class="header header-filter"></div>
-  <!-- class main-raised is used for the main area to be as a page with shadows -->
-  <div class="main main-raised">
-    <div class="profile-content">
-      <div class="container">
-        <div class="row">
-          <div class="profile col-md-12">
-            <div class="avatar">
-              <img src="./assets/img/profile.png" alt="Profile Image" class="img-circle img-responsive img-raised"/>
-            </div>
-            <div class="name">
-              <h3 class="title">Yash Chaudhary</h3>
-              <h6>Full Stack Developer</h6>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="description text-center">
-              <p>I’m an innovative full-stack developer based in Meerut,India.I'm dedicated to solve complex problems and create elegant and easy-to-use websites,mobile applications, and other digital products with an unforgettable and unique user experience.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-10 col-md-offset-1">
-            <div class="profile-tabs">
-              <div class="nav-align-center">
-                <ul class="nav nav-pills" role="tablist">
-                  <li class="active">
-                    <a href="#projects" role="tab" data-toggle="tab" aria-expanded="true">
-                      <i class="material-icons">web</i>
-                      Projects
-                    </a>
-                  </li>
-                  <!--Another Tab -> Will be released with next ver.-->
-                  <!-- <li>
-                    <a href="#skills" role="tab" data-toggle="tab" aria-expanded="true">
-                      <i class="material-icons">verified_user</i>
-                      Skills
-                    </a>
-                  </li> -->
-                </ul>
-                <div class="tab-content gallery">
-                  <div class="tab-pane active" id="projects">
-                      <div class="col-md-12">
-                        <a href="https://github.com/yash2code/ReactWeatherES6" class="col-sm-6" target="_blank">
-                          <img src="assets/img/weather.png" alt="weather_thumbnail" class="project-thumbnail">
-                        </a>
-                        <a href="https://github.com/yash2code/movie-python" class="col-md-6" target="_blank">
-                          <img src="assets/img/movie.jpg" alt="movie_thumbnail" class="project-thumbnail">
-                        </a>
-                        <a href="https://github.com/yash2code/Reminder-redux" class="col-md-6" target="_blank">
-                          <img src="assets/img/reminder.jpg" alt="reminder_thumbnail" class="project-thumbnail">
-                        </a>
-                      </div>
-                  </div>
-                  <!--Incomplete another tab content-->
-                  <!-- <div class="tab-pane" id="skills">
-                    <div class="row">
-                      <div class="col-md-12">
-                        <img src="assets/img/book.jpg" alt="" class="img-rounded img-responsive">
-                        <img src="assets/img/kala.jpg" alt="" class="img-rounded img-responsive">
-                      </div>
-                    </div>
-                  </div> -->
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
 <!--   Core JS Files   -->
 <script src="assets/js/jquery.min.js" type="text/javascript"></script>
